# knightprep

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  mockData.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CardArea.tsx  ChessBoard.tsx  Header.tsx  OpeningsPage.tsx  ResizeHandle.tsx  RightPanel.tsx  Sidebar.tsx
src/components/openings/: OpeningImportPanel.tsx  OpeningLibraryPanel.tsx  OpeningProgressDashboard.tsx  OpeningRepertoireBuilder.tsx  OpeningReviewQueuePanel.tsx  OpeningTrainingPanels.tsx  OpeningVariationTree.tsx  OpeningWeaknessPanel.tsx
src/hooks/: useResize.ts
src/utils/: chess.ts  openings.ts
